feat:template done

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-scripts": "^2.5.0",
+    "egg-static": "^2.1.0",
+    "egg-view-ejs": "^2.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -21,7 +23,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-ttpiano-web",
+    "start": "egg-scripts start --port=80 --daemon --title=egg-server-ttpiano-web",
     "stop": "egg-scripts stop --title=egg-server-ttpiano-web",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
