--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "crawler": "^1.1.2",
     "egg": "^2.2.1",
+    "egg-mongoose": "^2.2.0",
     "egg-scripts": "^2.5.0"
   },
   "devDependencies": {
